--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,10 @@ vignettes/*.pdf
 .httr-oauth
 
 # knitr and R markdown default cache directories
+_main.*
 /*_cache/
 /cache/
+/*_files/*
 
 # Temporary files created by R markdown
 *.utf8.md
