--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,15 @@ git:
 branches:
   only: master
 
+r_github_packages:
+  - ms609/TreeSearch
+  - ms609/Morphobank
+
+before_install:
+  - sudo add-apt-repository -y ppa:cran/imagemagick
+  - sudo apt-get update
+  - sudo apt-get install -y libmagick++-dev
+
 before_script:
   - chmod +x ./_build.sh
   - chmod +x ./_deploy.sh
