--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ addons:
   apt:
     packages:
       - ghostscript
+      - libmagick++-dev
 
 git:
   depth: 1
@@ -29,11 +30,6 @@ r_github_packages:
   - ms609/TreeSearch
   - ms609/Morphobank
   - TGuillerme/Inapp
-
-before_install:
-  - sudo add-apt-repository -y ppa:cran/imagemagick
-  - sudo apt-get update
-  - sudo apt-get install -y libmagick++-dev
 
 before_script:
   - chmod +x ./_build.sh
