Remove redundant _build.sh

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,10 +26,7 @@ r_github_packages:
   - ms609/Morphobank
   - TGuillerme/Inapp
 
-before_script:
-  - chmod +x ./_build.sh
-
-script: travis_wait 43 ./_build.sh
+script: Rscript -e "bookdown::render_book('index.Rmd', 'bookdown::gitbook')"
 
 deploy:
   provider: pages
