--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ r_github_packages:
   - ms609/Morphobank
   - TGuillerme/Inapp
 
-script: Rscript -e "bookdown::render_book('index.Rmd', 'bookdown::gitbook')"
+script: travis_wait 43 Rscript -e "bookdown::render_book('index.Rmd', 'bookdown::gitbook')"
 
 deploy:
   provider: pages
